fixed size issues, made sections take up most of the page, fixed overlap issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,14 @@ body, html {
 
 .app {
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn {
     margin: 0.5rem;
 }
+
 .p {
     margin: 0;
 }
@@ -21,13 +24,58 @@ body, html {
     border-radius: 0.25rem;
     width: 7rem;
     height: 2.5rem;
+    padding: 5rem;
+}
+
+.holder-div {
+    height: 100vh;
+    margin: 0.5rem;
 }
 
 .sections {
     margin: 0.5rem;
     box-shadow: 0.2rem 0.2rem 0.5rem #888888;
     border-radius: 0.25rem;
-    padding: 20px;
+    padding: 3rem;
+}
+
+.section-container {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    margin: 0.25rem;
+}
+
+.section1 {
+    align-self: flex-start;
+    margin: 0.5rem;
+    box-shadow: 0.2rem 0.2rem 0.5rem #888888;
+    border-radius: 0.25rem;
+    padding: 4rem;
+}
+
+.holder-div {
+    height: 90vh;
+    margin: 0.25rem;
+}
+
+.work {
+    height: 100%;
+    margin: 0.5rem;
+    box-shadow: 0.2rem 0.2rem 0.5rem #888888;
+    border-radius: 0.25rem;
+    padding: 3rem;
+}
+
+.contact {
+    margin: 0.5rem;
+    box-shadow: 0.2rem 0.2rem 0.5rem #888888;
+    border-radius: 0.25rem;
+}
+
+.home1, .home2 {
+    height: 50%;
+    margin: 0.25rem;
 }
 
 /* Navigations */
@@ -48,18 +96,6 @@ body, html {
     margin: 0.5rem;
 }
 
-.section-container {
-    display: flex;
-    flex-direction: row;
-}
-
-.section1 {
-    align-self: flex-start;
-    margin: 0.5rem;
-    box-shadow: 0.2rem 0.2rem 0.5rem #888888;
-    border-radius: 0.25rem;
-}
-
 .image {
     height: 22rem;
     min-width: 22rem;
@@ -68,6 +104,7 @@ body, html {
     border-radius: 50%;
     object-fit: cover;
     padding: 0.25rem;
+    margin: 0.25rem;
 }
 
 /* Media screen sizing */
